--- a/views/layout-m_test.jade
+++ b/views/layout-m_test.jade
@@ -82,7 +82,7 @@ html
             #tree_zoom_range.col-md-3.btn_tooltip
               input.zoom-range(type='range', min='0.4', max='1', step='0.05')
             #dropdown_list.col-md-3.btn_tooltip
-            #download-coreTree.col-md-1.btn_tooltip(data-toggle='tooltip', data-placement='bottom', title='download tree')
+            #download-coreTree.col-md-1.btn_tooltip
           .row
             .col-md-2
               br
@@ -102,7 +102,7 @@ html
             #tree-rotate-div.col-md-2
               input#tree-rotate(type='checkbox', data-toggle='toggle', data-style='ios', data-on='left-right', data-off='right-left', data-size='mini', data-onstyle='primary', data-offstyle='info')
             //#dropdown_list2.col-md-4
-            #download-geneTree.col-md-1(data-toggle='tooltip', data-placement='bottom', title='download tree ')
+            #download-geneTree.col-md-1.btn_tooltip
           .row
             .col-md-10
               #mytree2            
