add datatable path as param

--- a/views/layout-gridstack.jade
+++ b/views/layout-gridstack.jade
@@ -202,7 +202,7 @@ html
     script(type='text/javascript').
       $(function () {
       var options = {
-      cell_height: 30,
+      cellHeight: 30,//- cell_height: 30, 
       //vertical_margin: 15,
       //always_show_resize_handle: true,
       //animate: false,
