--- a/views/layout-m_test.jade
+++ b/views/layout-m_test.jade
@@ -42,18 +42,19 @@ html
           .alert.alert-info(role='alert') Species
           #species-selector
           .dc-data-count
-        #dc-straincount-chart.col-md-3
-          .alert.alert-info(role='alert') Gene count rank distribution 
-        #dc-geneLength-chart.col-md-3
-          .alert.alert-info(role='alert') Gene length distribution
         .col-md-2
           .alert.alert-info(role='alert') Core vs. Accessory
-          #dc-coreAcc-piechart  
+          #dc-coreAcc-piechart
           .col-md-4#col-coreThreshold
             span#coreThreshold(data-toggle='tooltip', data-placement='bottom', title='coreThreshold ')
               | cutoff:0.99
           .col-md-6
             #changeCoreThreshold
+        #dc-straincount-chart.col-md-3
+          .alert.alert-info(role='alert') Gene count rank distribution
+        #dc-geneLength-chart.col-md-3
+          .alert.alert-info(role='alert') Gene length distribution
+
       .row
         .col-md-6
           .alert.alert-info(role='alert') Gene cluster table
@@ -82,7 +83,7 @@ html
             #tree_zoom_range.col-md-3.btn_tooltip
               input.zoom-range(type='range', min='0.4', max='1', step='0.05')
             #dropdown_list.col-md-3.btn_tooltip
-            #download-coreTree.col-md-1.btn_tooltip
+            #download_coreTree.col-md-1.btn_tooltip
           .row
             .col-md-2
               br
@@ -99,13 +100,13 @@ html
               #searchStrain-group.input-group
                 span#sizing-addon1.input-group-addon.primary.sm-customized Search strain
                 input.form-control.sm-customized(type='text', placeholder='NCBI accession number', aria-describedby='sizing-addon1',oninput='search(this.value)')
-            #tree-rotate-div.col-md-2
-              input#tree-rotate(type='checkbox', data-toggle='toggle', data-style='ios', data-on='left-right', data-off='right-left', data-size='mini', data-onstyle='primary', data-offstyle='info')
+            #tree_rotate_div.col-md-2
+              input#tree_rotate(type='checkbox', data-toggle='toggle', data-style='ios', data-on='left-right', data-off='right-left', data-size='mini', data-onstyle='primary', data-offstyle='info')
             //#dropdown_list2.col-md-4
             #download-geneTree.col-md-1.btn_tooltip
           .row
             .col-md-10
-              #mytree2            
+              #mytree2
             .col-md-2
               br
               br
@@ -131,7 +132,7 @@ html
     script(src='javascripts/third_party/bootstrap-multiselect.js')
     script(src='javascripts/third_party/jquery.bootstrap-autohidingnavbar.min.js')
     script(src='javascripts/third_party/call-autohidingnavbar.js')
-    
+
     script(src='javascripts/third_party/d3-tip.min.js')
     script(src='javascripts/third_party/crossfilter.min.js')
     script(src='javascripts/third_party/dc.min.js')
@@ -140,7 +141,7 @@ html
     //- script(src='javascripts/third_party/dataTables.scrollingPagination.js')
     //- script(src='javascripts/third_party/dataTables.bootstrap.min.js')
     //- script(src='javascripts/third_party/dataTables.autoFill.min.js')
-    
+
     script(src='javascripts/third_party/table_plugin/jquery.dataTables.min.js')
     //script(src='javascripts/third_party/table_plugin/dataTables.buttons.min.js')
     script(src='javascripts/third_party/table_plugin/dataTables.bootstrap.min.js')
