--- a/views/layout-compare.jade
+++ b/views/layout-compare.jade
@@ -4,23 +4,23 @@ html
     meta(charset='UTF-8')
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     script(src='javascripts/third_party/pace.min.js')
-    link(rel="stylesheet", type="text/css", href="dist/all-edge.css")
+    //- link(rel="stylesheet", type="text/css", href="dist/all-edge.css")
 
-    //- link(rel="stylesheet", type="text/css", href='stylesheets/pace-theme-center-atom.css')
-    //- link(rel='stylesheet', href='stylesheets/bootstrap.min.css')
-    //- //link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css')
-    //- link(rel='stylesheet', type="text/css", href='stylesheets/bootstrap_customized.css')
-    //- link(rel="stylesheet", type="text/css", href='stylesheets/bootstrap-toggle.min.css')
-    //- link(rel="stylesheet", type="text/css", href='stylesheets/bootstrap-multiselect.css')
-    //- link(rel="stylesheet", type="text/css", href='stylesheets/nouislider.min.css')
-    //- link(rel="stylesheet", type="text/css", href='stylesheets/dc.css')
-    //- link(rel="stylesheet", type="text/css", href='stylesheets/dataTables.bootstrap.css')
-    //- link(rel="stylesheet", type="text/css", href='stylesheets/dataTables-customized.css')
-    //- link(rel="stylesheet", type="text/css", href='stylesheets/msa-new.css')
-    //- link(rel="stylesheet", type="text/css", href='stylesheets/d3-tip.css')
-    //- link(rel="stylesheet", type="text/css", href='stylesheets/page-appearance.css')
-    //- link(rel="stylesheet", type="text/css", href='stylesheets/autohiding-navbar2.css')
-    //- link(rel="stylesheet", type="text/css", href='stylesheets/footer.css')
+    link(rel="stylesheet", type="text/css", href='stylesheets/pace-theme-center-atom.css')
+    link(rel='stylesheet', href='stylesheets/bootstrap.min.css')
+    //link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css')
+    link(rel='stylesheet', type="text/css", href='stylesheets/bootstrap_customized.css')
+    link(rel="stylesheet", type="text/css", href='stylesheets/bootstrap-toggle.min.css')
+    link(rel="stylesheet", type="text/css", href='stylesheets/bootstrap-multiselect.css')
+    link(rel="stylesheet", type="text/css", href='stylesheets/nouislider.min.css')
+    link(rel="stylesheet", type="text/css", href='stylesheets/dc.css')
+    link(rel="stylesheet", type="text/css", href='stylesheets/dataTables.bootstrap.css')
+    link(rel="stylesheet", type="text/css", href='stylesheets/dataTables-customized.css')
+    link(rel="stylesheet", type="text/css", href='stylesheets/msa-new.css')
+    link(rel="stylesheet", type="text/css", href='stylesheets/d3-tip.css')
+    link(rel="stylesheet", type="text/css", href='stylesheets/page-appearance.css')
+    link(rel="stylesheet", type="text/css", href='stylesheets/autohiding-navbar2.css')
+    link(rel="stylesheet", type="text/css", href='stylesheets/footer.css')
 
     // footer icon and font
     link(rel='stylesheet', type='text/css', href='http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css')
@@ -36,58 +36,60 @@ html
       .grid-stack
         br
         br
-        //- data-count
-        #dc-data-count.col-md-6.grid-stack-item(data-gs-x='0', data-gs-y='1', data-gs-width='6', data-gs-height='0')
+        //- dc-charts(tool A)
+        //- data-count(tool A)
+        #dc_data_count.col-md-6.grid-stack-item(data-gs-x='0', data-gs-y='1', data-gs-width='6', data-gs-height='0')
           .grid-stack-item-content
           .alert.alert-info(role='alert') count
           .col-md-7
-            .dc-data-count
+            .dc_data_count
           .col-md-2
-            span#dc-coreAcc-piechart
+            span#dc_coreAcc_piechart
           .col-md-2
             span#coreThreshold(data-toggle='tooltip', data-placement='bottom', title='coreThreshold ')
               | cutoff:0.99
             #changeCoreThreshold
-        //- straincount-chart
-        #dc-straincount-chart.col-md-3.grid-stack-item(data-gs-x='0', data-gs-y='3', data-gs-width='3', data-gs-height='0')
+        //- straincount-chart(tool A)
+        #dc_straincount_chart.col-md-3.grid-stack-item(data-gs-x='0', data-gs-y='3', data-gs-width='3', data-gs-height='0')
           .grid-stack-item-content
           .alert.alert-info(role='alert') Gene count rank distribution
-        //- geneLength-chart
-        #dc-geneLength-chart.col-md-3.grid-stack-item(data-gs-x='3', data-gs-y='3', data-gs-width='3', data-gs-height='0')
+        //- geneLength-chart(tool A)
+        #dc_geneLength_chart.col-md-3.grid-stack-item(data-gs-x='3', data-gs-y='3', data-gs-width='3', data-gs-height='0')
           .grid-stack-item-content
           .alert.alert-info(role='alert') Gene length distribution
 
-        //- data-count
-        #dc-data-count2.col-md-6.grid-stack-item(data-gs-x='6', data-gs-y='1', data-gs-width='6', data-gs-height='0')
+        //- dc-charts(tool B)
+        //- data-count(tool B)
+        #dc_data_count2.col-md-6.grid-stack-item(data-gs-x='6', data-gs-y='1', data-gs-width='6', data-gs-height='0')
           .grid-stack-item-content
-          .alert.alert-info(role='alert') count
+          .alert.alert-warning(role='alert') count
           .col-md-7
-            .dc-data-count2
+            .dc_data_count2
           .col-md-2
-            span#dc-coreAcc-piechart2
+            span#dc_coreAcc_piechart2
           .col-md-2
             span#coreThreshold2(data-toggle='tooltip', data-placement='bottom', title='coreThreshold ')
               | cutoff:0.99
             #changeCoreThreshold2
-        //- straincount-chart
-        #dc-straincount-chart2.col-md-3.grid-stack-item(data-gs-x='6', data-gs-y='3', data-gs-width='3', data-gs-height='0')
+        //- straincount-chart(tool B)
+        #dc_straincount_chart2.col-md-3.grid-stack-item(data-gs-x='6', data-gs-y='3', data-gs-width='3', data-gs-height='0')
           .grid-stack-item-content
-          .alert.alert-info(role='alert') Gene count rank distribution
-        //- geneLength-chart
-        #dc-geneLength-chart2.col-md-3.grid-stack-item(data-gs-x='9', data-gs-y='3', data-gs-width='3', data-gs-height='0')
+          .alert.alert-warning(role='alert') Gene count rank distribution
+        //- geneLength-chart(tool B)
+        #dc_geneLength_chart2.col-md-3.grid-stack-item(data-gs-x='9', data-gs-y='3', data-gs-width='3', data-gs-height='0')
           .grid-stack-item-content
-          .alert.alert-info(role='alert') Gene length distribution
+          .alert.alert-warning(role='alert') Gene length distribution
 
-        //- cluster table
+        //- cluster table(tool A)
         .col-md-6.grid-stack-item(data-gs-x='0', data-gs-y='7', data-gs-width='6', data-gs-height='0')
           .grid-stack-item-content
           .alert.alert-info(role='alert') Gene cluster table
-          table#dc-data-table.table.table-striped.table(cellspacing='0', width='100%')
-        //- cluster table2
+          table#dc_data_table1.table.table-striped.table(cellspacing='0', width='100%')
+        //- cluster table(tool B)
         .col-md-6.grid-stack-item(data-gs-x='6', data-gs-y='7', data-gs-width='6', data-gs-height='0')
           .grid-stack-item-content
-          .alert.alert-info(role='alert') Gene cluster table
-          table#dc-data-table11.table.table-striped.table(cellspacing='0', width='100%')
+          .alert.alert-warning(role='alert') Gene cluster table
+          table#dc_data_table2.table.table-striped.table(cellspacing='0', width='100%')
 
         //- //- MSA viewer
         //- .col-md-6.grid-stack-item(data-gs-x='6', data-gs-y='5', data-gs-width='6', data-gs-height='0')
@@ -96,7 +98,6 @@ html
         //-     #sequence_viewer_title Sequence alignment
         //-   #snippetDiv
 
-        //### tool A
         //- strain tree (tool A)
         .col-md-6.grid-stack-item(data-gs-x='0', data-gs-y='14', data-gs-width='6', data-gs-height='0')
           .grid-stack-item-content
@@ -125,10 +126,10 @@ html
             .col-md-10
               #mytree1
         //- gene tree (tool A)
-        .col-md-6.grid-stack-item(data-gs-x='0', data-gs-y='20', data-gs-width='6', data-gs-height='0')
+        .col-md-6.grid-stack-item(data-gs-x='0', data-gs-y='26', data-gs-width='6', data-gs-height='0')
           .grid-stack-item-content
           .alert.alert-info(role='alert')
-            #genetree_title Gene tree (individual gene)
+            #genetree_title_01 Gene tree (individual gene)
           .row
             .col-md-4
               #searchStrain-group_01.input-group
@@ -147,11 +148,10 @@ html
               br
               svg#legend2
 
-        //### tool B
         //- strain tree (tool B)
         .col-md-6.grid-stack-item(data-gs-x='6', data-gs-y='14', data-gs-width='6', data-gs-height='0')
           .grid-stack-item-content
-          .alert.alert-info(role='alert')
+          .alert.alert-warning(role='alert')
             | Strain tree (SNPs in all core genes)
           .row
             #LeftTreeButtons.col-md-5(style='vertical-align: top')
@@ -175,12 +175,11 @@ html
               svg#legend
             .col-md-10
               #compare_tree1
-
         //- gene tree (tool B)
-        .col-md-6.grid-stack-item(data-gs-x='6', data-gs-y='20', data-gs-width='6', data-gs-height='0')
+        .col-md-6.grid-stack-item(data-gs-x='6', data-gs-y='26', data-gs-width='6', data-gs-height='0')
           .grid-stack-item-content
-          .alert.alert-info(role='alert')
-            #genetree_title Gene tree (individual gene)
+          .alert.alert-warning(role='alert')
+            #genetree_title_02 Gene tree (individual gene)
           .row
             .col-md-4
               #searchStrain-group_02.input-group
@@ -200,10 +199,10 @@ html
               svg#legend2
 
         //- metadata table
-        .col-md-12.grid-stack-item(data-gs-x='0', data-gs-y='26', data-gs-width='12', data-gs-height='0')
+        .col-md-12.grid-stack-item(data-gs-x='0', data-gs-y='32', data-gs-width='12', data-gs-height='0')
           .grid-stack-item-content
           .alert.alert-info(role='alert') Strain meta-info table
-          table#dc-data-table2.table.table-striped.table(cellspacing='0', width='100%')
+          table#dc_data_table_meta.table.table-striped.table(cellspacing='0', width='100%')
 
       .row
         .row
@@ -265,8 +264,8 @@ html
     //- script(src='javascripts/tree-view.js')
     script(src='javascripts/tree-view-compare.js')
     script(src='javascripts/interact-compare.js')
-    script(src='javascripts/datatable-meta.js')
     script(src='javascripts/meta-color-legend.js')
+    script(src='javascripts/datatable-meta.js')
 
     link(rel='stylesheet', href='//cdnjs.cloudflare.com/ajax/libs/gridstack.js/0.2.6/gridstack.min.css')
     script(type='text/javascript', src='//cdnjs.cloudflare.com/ajax/libs/gridstack.js/0.2.6/gridstack.min.js')
