update id for tree-download

--- a/views/layout-compare.jade
+++ b/views/layout-compare.jade
@@ -138,7 +138,7 @@ html
             #tree_rotate_div_01.col-md-2
               input#tree_rotate_01(type='checkbox', data-toggle='toggle', data-style='ios', data-on='left-right', data-off='right-left', data-size='mini', data-onstyle='primary', data-offstyle='info')
             //#dropdown_list2.col-md-4
-            #download-geneTree_01.col-md-1.btn_tooltip
+            #download_geneTree_01.col-md-1.btn_tooltip
           .row
             .col-md-10
               #mytree2
@@ -188,7 +188,7 @@ html
             #tree_rotate_div_02.col-md-2
               input#tree_rotate_02(type='checkbox', data-toggle='toggle', data-style='ios', data-on='left-right', data-off='right-left', data-size='mini', data-onstyle='primary', data-offstyle='info')
             //#dropdown_list2.col-md-4
-            #download-geneTree_02.col-md-1.btn_tooltip
+            #download_geneTree_02.col-md-1.btn_tooltip
           .row
             .col-md-10
               #compare_tree2
