param name changed (tree_div)

--- a/views/layout-compare.jade
+++ b/views/layout-compare.jade
@@ -268,6 +268,7 @@ html
     //- script(src='javascripts/tree-view.js')
     script(src='javascripts/tree-view-compare.js')
     script(src='javascripts/interact-compare.js')
+    script(src='javascripts/render_viewer.js')
     script(src='javascripts/meta-color-legend.js')
     script(src='javascripts/datatable-meta.js')
 
