--- a/views/layout-m_test.jade
+++ b/views/layout-m_test.jade
@@ -38,27 +38,27 @@ html
         #logo.col-md-2
           img(src='images/pan-blue-noReads.svg', style='width:230;height:209px;')
           .col-md-2
-        #dc-data-count.col-md-2
+        #dc_data_count.col-md-2
           .alert.alert-info(role='alert') Species
           #species-selector
-          .dc-data-count
+          .dc_data_count
         .col-md-2
           .alert.alert-info(role='alert') Core vs. Accessory
-          #dc-coreAcc-piechart
+          #dc_coreAcc_piechart
           .col-md-4#col-coreThreshold
             span#coreThreshold(data-toggle='tooltip', data-placement='bottom', title='coreThreshold ')
               | cutoff:0.99
           .col-md-6
             #changeCoreThreshold
-        #dc-straincount-chart.col-md-3
+        #dc_straincount_chart.col-md-3
           .alert.alert-info(role='alert') Gene count rank distribution
-        #dc-geneLength-chart.col-md-3
+        #dc_geneLength_chart.col-md-3
           .alert.alert-info(role='alert') Gene length distribution
 
       .row
         .col-md-6
           .alert.alert-info(role='alert') Gene cluster table
-          table#dc-data-table.table.table-striped.table(cellspacing='0', width='100%')
+          table#dc_data_table.table.table-striped.table(cellspacing='0', width='100%')
         .col-md-6
           .alert.alert-info(role='alert')
             #sequence_viewer_title Sequence alignment
@@ -80,8 +80,10 @@ html
                 span.glyphicon.glyphicon-resize-small
               //- i#Height_plus_Toggle.glyphicon.glyphicon-plus-sign/minus-sign
               //- span#treeLoader
-            #tree_zoom_range.col-md-3.btn_tooltip
-              input.zoom-range(type='range', min='0.4', max='1', step='0.05')
+            #tree_zoom.col-md-2.btn_tooltip
+              input#tree_zoom_range.col-md-10(type='range', style='padding:0;')
+              button#tree_zoom_reset.btn.btn-xs.btn-primary.btn_tooltip
+                span.glyphicon.glyphicon-refresh
             #dropdown_list.col-md-3.btn_tooltip
             #download_coreTree.col-md-1.btn_tooltip
           .row
@@ -103,7 +105,7 @@ html
             #tree_rotate_div.col-md-2
               input#tree_rotate(type='checkbox', data-toggle='toggle', data-style='ios', data-on='left-right', data-off='right-left', data-size='mini', data-onstyle='primary', data-offstyle='info')
             //#dropdown_list2.col-md-4
-            #download-geneTree.col-md-1.btn_tooltip
+            #download_geneTree.col-md-1.btn_tooltip
           .row
             .col-md-10
               #mytree2
@@ -115,7 +117,7 @@ html
       .row
         .col-md-12
           .alert.alert-info(role='alert') Strain meta-info table
-          table#dc-data-table2.table.table-striped.table(cellspacing='0', width='100%')
+          table#dc_data_table_meta.table.table-striped.table(cellspacing='0', width='100%')
     include footer
     block content
     //- script(src='dist/all-edge.js')
@@ -150,12 +152,12 @@ html
     script(src='javascripts/third_party/msa-new.js')
     script(src='javascripts/third_party/tnt.tree.min.js')
     script(src='javascripts/third_party/jquery.panzoom.min.js')
-    script(src='javascripts/data_path.js')
+    script(src='javascripts/data_path-compare.js')
     script(src='javascripts/tooltips.js')
     script(src='javascripts/datatable-gc.js')
     script(src='javascripts/tree-init.js')
-    script(src='javascripts/tree-view.js')
-    script(src='javascripts/interact.js')
-    script(src='javascripts/datatable-meta.js')
+    script(src='javascripts/tree-view-compare.js')
+    script(src='javascripts/interact-compare.js')
     script(src='javascripts/meta-color-legend.js')
-
+    script(src='javascripts/render_viewer_m_test.js')
+    script(src='javascripts/datatable-meta.js')
