add coreTree_legend_id to make different legend in different tool_side work

--- a/views/layout-compare.jade
+++ b/views/layout-compare.jade
@@ -124,7 +124,7 @@ html
               br
               br
               br
-              svg#legend
+              svg#coreTree_legend_01
             .col-md-10
               #mytree1
         //- gene tree (tool A)
@@ -176,7 +176,7 @@ html
               br
               br
               br
-              svg#legend
+              svg#coreTree_legend_02
             .col-md-10
               #compare_tree1
         //- gene tree (tool B)
