--- a/views/layout-m_test.jade
+++ b/views/layout-m_test.jade
@@ -91,7 +91,7 @@ html
               br
               br
               br
-              svg#legend
+              svg#coreTree_legend
             .col-md-10
               #mytree1
         .col-md-6
