--- a/views/layout-compare.jade
+++ b/views/layout-compare.jade
@@ -278,7 +278,7 @@ html
     //- script(type='text/javascript', src='//cdnjs.cloudflare.com/ajax/libs/gridstack.js/0.2.6/gridstack.min.js')
 
     //- link(rel="stylesheet", type="text/css", href='stylesheets/gridstack.css')
-    script(type='text/javascript', src='javascripts/gridstack-config.js')
+    //- script(type='text/javascript', src='javascripts/gridstack-config.js')
 
     //- script(type='text/javascript').
     //-   $(function () {
