--- a/views/index.jade
+++ b/views/index.jade
@@ -1,6 +1,6 @@
-extends layout
+extends layout-m_test
 
 block content
     script.
-      var speciesAbbr='Sa'
-    script(src='javascripts/meta-dict-Sa.js')
+      var speciesAbbr='m_test'
+    script(src='javascripts/meta-dict-m_test.js')
