comment jquery-uni

--- a/views/layout-compare.jade
+++ b/views/layout-compare.jade
@@ -237,7 +237,6 @@ html
     script(src='javascripts/third_party/wNumb.js')
     script(src='javascripts/third_party/nouislider.min.js')
     script(src='javascripts/third_party/jquery.min.js')
-    script(src='javascripts/third_party/jquery-ui.min.js')
     script(src='javascripts/third_party/lodash.min.js')
     script(src='javascripts/third_party/bootstrap.min.js')
     script(src='javascripts/third_party/bootstrap-toggle.min.js')
@@ -274,6 +273,7 @@ html
     script(src='javascripts/render_viewer.js')
     script(src='javascripts/datatable-meta.js')
 
+    //- script(src='javascripts/third_party/jquery-ui.min.js')
     //- link(rel='stylesheet', href='//cdnjs.cloudflare.com/ajax/libs/gridstack.js/0.2.6/gridstack.min.css')
     //- script(type='text/javascript', src='//cdnjs.cloudflare.com/ajax/libs/gridstack.js/0.2.6/gridstack.min.js')
 
