--- a/views/layout-compare.jade
+++ b/views/layout-compare.jade
@@ -262,15 +262,15 @@ html
     script(src='javascripts/third_party/tnt.tree.min.js')
     script(src='javascripts/third_party/jquery.panzoom.min.js')
 
-    script(src='javascripts/data_path-compare.js')
+    script(src='javascripts/data_path.js')
     script(src='javascripts/tooltips.js')
     script(src='javascripts/datatable-gc.js')
     script(src='javascripts/tree-init.js')
     //- script(src='javascripts/tree-view.js')
-    script(src='javascripts/tree-view-compare.js')
-    script(src='javascripts/interact-compare.js')
+    script(src='javascripts/tree-view.js')
+    script(src='javascripts/interact.js')
     script(src='javascripts/meta-color-legend.js')
-    script(src='javascripts/render_viewer.js')
+    script(src='javascripts/render_viewer_comparative.js')
     script(src='javascripts/datatable-meta.js')
 
     //- script(src='javascripts/third_party/jquery-ui.min.js')
