add  chart_style.js and chart_style_comparative.js for different styles of chart(e.g.: pie chart size)

--- a/views/layout-compare.jade
+++ b/views/layout-compare.jade
@@ -60,7 +60,7 @@ html
             span#coreThreshold2(data-toggle='tooltip', data-placement='bottom', title='coreThreshold ')
               | cutoff:0.99
             #changeCoreThreshold2
-        
+
         //- dc-charts(tool A)
         //- straincount-chart(tool A)
         #dc_straincount_chart.col-md-3.grid-stack-item(data-gs-x='0', data-gs-y='3', data-gs-width='3', data-gs-height='0')
@@ -268,6 +268,7 @@ html
     script(src='javascripts/tree-init.js')
     //- script(src='javascripts/tree-view.js')
     script(src='javascripts/tree-view.js')
+    script(src='javascripts/chart_style_comparative.js')
     script(src='javascripts/interact.js')
     script(src='javascripts/meta-color-legend.js')
     script(src='javascripts/render_viewer_comparative.js')
