--- a/views/layout.jade
+++ b/views/layout.jade
@@ -157,6 +157,7 @@ html
     script(src='javascripts/datatable-gc.js')
     script(src='javascripts/tree-init.js')
     script(src='javascripts/tree-view.js')
+    script(src='javascripts/chart_style.js')
     script(src='javascripts/interact.js')
     script(src='javascripts/meta-color-legend.js')
     script(src='javascripts/render_viewer.js')
