--- a/views/layout.jade
+++ b/views/layout.jade
@@ -55,7 +55,7 @@ html
         #dc_geneLength_chart.col-md-3
           .alert.alert-info(role='alert') Gene length distribution
 
-      .row
+      .row.cs_shadow
         .col-md-6
           .alert.alert-info(role='alert') Gene cluster table
           table#dc_data_table.table.table-striped.table(cellspacing='0', width='100%')
@@ -63,7 +63,7 @@ html
           .alert.alert-info(role='alert')
             #sequence_viewer_title Sequence alignment
           #snippetDiv
-      #all_trees.row
+      #all_trees.row.cs_shadow
         .col-md-6
           .alert.alert-info(role='alert')
             | Strain tree (SNPs in all core genes)
@@ -114,7 +114,7 @@ html
               br
               br
               svg#legend2
-      .row
+      .row.cs_shadow
         .col-md-12
           .alert.alert-info(role='alert') Strain meta-info table
           table#dc_data_table_meta.table.table-striped.table(cellspacing='0', width='100%')
